cabal-version:      2.4
name:               hxt-xinclude
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            MIT
license-file:       LICENSE
author:             gemmaro
maintainer:         gemmaro.dev@gmail.com

-- A copyright notice.
-- copyright:

-- category:

extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules: Text.XML.HXT.XInclude

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
      base ^>=4.14.3.0,
      hxt >= 9.3.1 && < 9.4,
      filepath >= 1.4.2 && < 1.5

    hs-source-dirs:   src
    default-language: Haskell2010
